@@ -1,21 +1,20 @@
 package io.j13n.core.service.search;
 
 import io.j13n.core.commons.jooq.service.AbstractJOOQUpdatableDataService;
-import io.j13n.core.dao.JobsDAO;
-import io.j13n.core.dto.search.Jobs;
-import io.j13n.core.enums.JobStatus;
+import io.j13n.core.dao.JobDAO;
+import io.j13n.core.dto.search.Job;
 import io.j13n.core.jooq.core.tables.records.CoreJobsRecord;
+import io.j13n.core.model.JobSearchResult;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
 import java.util.concurrent.CompletableFuture;
-import java.util.stream.Collectors;
 
 @Service
-public class JobsService extends AbstractJOOQUpdatableDataService<CoreJobsRecord, Long, Jobs, JobsDAO> {
+public class JobService extends AbstractJOOQUpdatableDataService<CoreJobsRecord, Long, Job, JobDAO> {
 
     @Override
-    protected CompletableFuture<Jobs> updatableEntity(Jobs entity) {
+    protected CompletableFuture<Job> updatableEntity(Job entity) {
         return CompletableFuture.supplyAsync(() -> {
             if (entity.getId() != null) {
                 return super.read(entity.getId())
@@ -36,20 +35,18 @@ public class JobsService extends AbstractJOOQUpdatableDataService<CoreJobsRecord
         });
     }
 
-    /**
-     * Saves multiple jobs in batch
-     *
-     * @param jobs the list of jobs to save
-     * @return a CompletableFuture containing the list of saved jobs
-     */
-    public CompletableFuture<List<Jobs>> saveJobs(List<Jobs> jobs) {
-        List<CompletableFuture<Jobs>> futures = jobs.stream()
+    public CompletableFuture<List<Job>> saveJobResult(List<JobSearchResult> jobSearchResults) {
+        List<CompletableFuture<Job>> futures = jobSearchResults.stream().map()
+    }
+
+    public CompletableFuture<List<Job>> saveJobs(List<Job> jobs) {
+        List<CompletableFuture<Job>> futures = jobs.stream()
                 .map(this::create)
-                .collect(Collectors.toList());
+                .toList();
 
         return CompletableFuture.allOf(futures.toArray(new CompletableFuture[0]))
                 .thenApply(v -> futures.stream()
                         .map(CompletableFuture::join)
-                        .collect(Collectors.toList()));
+                        .toList());
     }
 }
